--- a/edit-people.html
+++ b/edit-people.html
@@ -3,6 +3,7 @@
     <head>
         <title>Bewerk personen</title>
         
+        <link rel="stylesheet" href="/css/common.css" />
         <link rel="stylesheet" href="/css/edit-people.css" />
         <link rel="stylesheet" href="/css/humanity.css" />
         
