--- a/edit-people.html
+++ b/edit-people.html
@@ -89,8 +89,8 @@
                     <td class="label"><label for="Field-Banknummer">Banknummer</label></td>
                     <td><input type="text" id="Field-Banknummer" /></td>
                     
-                    <td class="label"><label for="Field-tenaamstelling">tenaamstelling</label></td>
-                    <td><input type="text" id="Field-tenaamstelling" /></td>
+                    <td class="label"><label for="Field-Tenaamstelling">Tenaamstelling</label></td>
+                    <td><input type="text" id="Field-Tenaamstelling" /></td>
                     
                     <td>&nbsp;</td><td>&nbsp;</td>
                 </tr>
