--- a/edit-people.html
+++ b/edit-people.html
@@ -19,6 +19,7 @@
                 <input type="text" />
                 <a id="IDNav-next">&nbsp;</a>
                 <a id="IDNav-last">&nbsp;</a>
+                <a id="IDNav-save">Opslaan</a>
             </div>
             
             <table>
