Nieuwe plaatjes op de knoppen.

--- a/edit-people.html
+++ b/edit-people.html
@@ -19,7 +19,7 @@
                 <input type="text" />
                 <a id="IDNav-next">&nbsp;</a>
                 <a id="IDNav-last">&nbsp;</a>
-                <a id="IDNav-save">Opslaan</a>
+                <a id="IDNav-save">&nbsp;</a>
             </div>
             
             <table>
