Weg vrijbanen voor een tweede <input> in de navigatiebalk.

--- a/edit-people.html
+++ b/edit-people.html
@@ -16,7 +16,7 @@
             <div id="IDNavigator">
                 <a id="IDNav-fist">&nbsp;</a>
                 <a id="IDNav-back">&nbsp;</a>
-                <input type="text" />
+                <input type="text" id="IDNav-id" />
                 <a id="IDNav-next">&nbsp;</a>
                 <a id="IDNav-last">&nbsp;</a>
                 <a id="IDNav-save">&nbsp;</a>
