--- a/edit-people.html
+++ b/edit-people.html
@@ -19,6 +19,7 @@
                 <input type="text" id="IDNav-id" />
                 <a id="IDNav-next">&nbsp;</a>
                 <a id="IDNav-last">&nbsp;</a>
+                <div class="separator">&nbsp;</div>
                 <a id="IDNav-save">&nbsp;</a>
             </div>
             
