Zoekveldje en -knop.

--- a/edit-people.html
+++ b/edit-people.html
@@ -20,6 +20,9 @@
                 <a id="IDNav-next">&nbsp;</a>
                 <a id="IDNav-last">&nbsp;</a>
                 <div class="separator">&nbsp;</div>
+                <input type="text" id="IDNav-searchbox" />
+                <a id="IDNav-search">&nbsp;</a>
+                <div class="separator">&nbsp;</div>
                 <a id="IDNav-save">&nbsp;</a>
             </div>
             
