Knopjes voor toevoegen/verwijderen

--- a/edit-people.html
+++ b/edit-people.html
@@ -23,6 +23,9 @@
                 <input type="text" id="IDNav-searchbox" />
                 <a id="IDNav-search">&nbsp;</a>
                 <div class="separator">&nbsp;</div>
+                <a id="IDNav-insert">&nbsp;</a>
+                <a id="IDNav-delete">&nbsp;</a>
+                <div class="separator">&nbsp;</div>
                 <a id="IDNav-save">&nbsp;</a>
             </div>
             
