Simpel JSON heen en weer gooien.

--- a/edit-people.html
+++ b/edit-people.html
@@ -116,6 +116,11 @@
                     <td colspan="2">Secties/commissies</td>
                     <td colspan="2">Relaties</td>
                 </tr>
+                <tr>
+                    <td colspan="2" class="special_label"><ul id="Studies" /></td>
+                    <td colspan="2" class="special_label"><ul id="Secties" /></td>
+                    <td colspan="2" class="special_label"><ul id="Relaties" /></td>
+                </tr>
             </table>
         </div>
     </body>
