Opzoeken van namen

--- a/edit-people.html
+++ b/edit-people.html
@@ -9,6 +9,7 @@
         
         <script type="text/javascript" src="/js/jquery.js"></script>
         <script type="text/javascript" src="/js/jquery-ui.js"></script>
+        <script type="text/javascript" src="/js/naam.js"></script>
         <script type="text/javascript" src="/js/edit-people.js"></script>
     </head>
     <body>
