Het groep-bewerk-scherm heeft nu een 'opslaan'-knop.

--- a/edit-people.html
+++ b/edit-people.html
@@ -139,6 +139,9 @@
                     <label for="tot">Tot</label>
                     <input id="tot" type="date" />
                 </p>
+                <p>
+                    <input type="button" id="save" value="Opslaan" />
+                </p>
             </div>
         </div>
     </body>
