--- a/edit-people.html
+++ b/edit-people.html
@@ -12,8 +12,17 @@
         <script type="text/javascript" src="/js/naam.js"></script>
         <script type="text/javascript" src="/js/SGR.js"></script>
         <script type="text/javascript" src="/js/edit-people.js"></script>
+        <script type="text/javascript" src="/js/json2-min.js"></script>
     </head>
     <body>
+        <div>
+            <a id="debug">Debug-ding 1</a>
+            <script type="text/javascript">
+            $("#debug").click(function(){
+                alert( JSON.stringify(SGR.Groep.transaction) )
+            });
+            </script>
+        </div>
         <div id="EditPeople">
             <div id="IDNavigator">
                 <a id="IDNav-fist">&nbsp;</a>
@@ -129,15 +138,15 @@
             <div class="slc_dialog" id="GroepenEditor">
                 <p>
                     <label for="groep_id">Groep</label>
-                    <select id="groep_id"><?=Groepen()?></select>
+                    <select id="groep_id" class="resetable"><?=Groepen()?></select>
                 </p>
                 <p>
                     <label for="van">Van</label>
-                    <input id="van" type="date" />
+                    <input id="van" class="resetable" type="date" />
                 </p>
                 <p>
                     <label for="tot">Tot</label>
-                    <input id="tot" type="date" />
+                    <input id="tot" class="resetable" type="date" />
                 </p>
                 <p>
                     <input type="button" id="save" value="Opslaan" />
