SpecialLabelContainer is weer terug. En hij werkt.

--- a/edit-people.html
+++ b/edit-people.html
@@ -10,6 +10,7 @@
         <script type="text/javascript" src="/js/jquery.js"></script>
         <script type="text/javascript" src="/js/jquery-ui.js"></script>
         <script type="text/javascript" src="/js/naam.js"></script>
+        <script type="text/javascript" src="/js/SpecialLabelContainer.js"></script>
         <script type="text/javascript" src="/js/SGR.js"></script>
         <script type="text/javascript" src="/js/edit-people.js"></script>
         <script type="text/javascript" src="/js/json2-min.js"></script>
