HTML heeft een nieuwe structuur, in voorbereiding op het aanleggen van knopjes.

--- a/edit-people.html
+++ b/edit-people.html
@@ -123,15 +123,15 @@
                     
                     <td>&nbsp;</td><td>&nbsp;</td>
                 </tr>
-                <tr>
+                <!--<tr>
                     <td colspan="2">Studies</td>
                     <td colspan="2">Secties/commissies</td>
                     <td colspan="2">Relaties</td>
-                </tr>
+                </tr>-->
                 <tr>
-                    <td colspan="2" class="special_label"><ul id="Studies" /></td>
-                    <td colspan="2" class="special_label"><ul id="Secties" /></td>
-                    <td colspan="2" class="special_label"><ul id="Relaties" /></td>
+                    <td colspan="2" id="Studies"  class="special_label"><span>Studies</span><ul /></td>
+                    <td colspan="2" id="Secties"  class="special_label"><span>Secties/commissies</span><ul /></td>
+                    <td colspan="2" id="Relaties" class="special_label"><span>Relaties</span><ul /></td>
                 </tr>
             </table>
         </div>
