Zie vorig bericht.

--- a/edit-people.html
+++ b/edit-people.html
@@ -123,15 +123,10 @@
                     
                     <td>&nbsp;</td><td>&nbsp;</td>
                 </tr>
-                <!--<tr>
-                    <td colspan="2">Studies</td>
-                    <td colspan="2">Secties/commissies</td>
-                    <td colspan="2">Relaties</td>
-                </tr>-->
                 <tr>
-                    <td colspan="2" id="Studies"  class="special_label"><span>Studies</span><ul /></td>
-                    <td colspan="2" id="Secties"  class="special_label"><span>Secties/commissies</span><ul /></td>
-                    <td colspan="2" id="Relaties" class="special_label"><span>Relaties</span><ul /></td>
+                    <td colspan="2" id="Studies"  class="special_label">Studies</td>
+                    <td colspan="2" id="Secties"  class="special_label">Secties/commissies</td>
+                    <td colspan="2" id="Relaties" class="special_label">Relaties</td>
                 </tr>
             </table>
         </div>
