--- a/edit-people.html
+++ b/edit-people.html
@@ -145,7 +145,8 @@
                     <input id="tot" class="resetable" type="date" />
                 </p>
                 <p>
-                    <input type="button" id="save" value="Opslaan" />
+                    <input type="button" id="delete" value="Verwijderen" />
+                    <input type="button" id="save" value="Opslaan" style="float: right" />
                 </p>
             </div>
         </div>
