--- a/edit-people.html
+++ b/edit-people.html
@@ -149,6 +149,20 @@
                     <input type="button" id="save" value="Opslaan" style="float: right" />
                 </p>
             </div>
+            <div class="slc_dialog" id="StudieEditor">
+                <p>
+                    <label for="studie_id">Studie</label>
+                    <select id="studie_id" class="resetable"><?=Studies()?></select>
+                </p>
+                <p>
+                    <input id="afgestudeerd" type="checkbox" class="resetable"/>
+                    <label for="afgestudeerd">Afgestudeerd</label>
+                </p>
+                <p>
+                    <input type="button" id="delete" value="Verwijderen" />
+                    <input type="button" id="save" value="Opslaan" style="float: right" />
+                </p>
+            </div>
         </div>
     </body>
 </html>
