Checkbox wordt nu ook gereset.

--- a/edit-people.html
+++ b/edit-people.html
@@ -155,7 +155,7 @@
                     <select id="studie_id" class="resetable"><?=Studies()?></select>
                 </p>
                 <p>
-                    <input id="afgestudeerd" type="checkbox" class="resetable"/>
+                    <input id="afgestudeerd" type="checkbox" class="uncheckable"/>
                     <label for="afgestudeerd">Afgestudeerd</label>
                 </p>
                 <p>
