--- a/edit-people.html
+++ b/edit-people.html
@@ -170,11 +170,11 @@
             <div class="slc_dialog" id="RelatieEditor">
                 <p>
                     <label for="pers_id_b">Persoon</label>
-                    <select id="pers_id_b"><?=Namen()?></select>
+                    <select id="pers_id_b" class="resetable"><?=Namen()?></select>
                 </p>
                 <p>
                     <label for="type">Relatietype</label>
-                    <select id="type">
+                    <select id="type" class="resetable">
                         <option value="ouder">Ouder van ...</option>
                         <option value="kind">Kind van ...</option>
                         <option value="partner">Partner van ...</option>
