Checken tegen Google

--- a/error/auth.html
+++ b/error/auth.html
@@ -91,7 +91,7 @@
                                                     <tr id="email-row"> 
                                                         <td nowrap="nowrap"> <div align="right"> <span class="gaia le lbl"> Gebruikersnaam: </span> </div> </td> 
                                                         <td> 
-                                                            <input type="text" name="username" id="Email" size="18" value="" class='gaia le val' /> 
+                                                            <input type="text" name="username" id="Email" size="18" value="<?=@$_POST['username']?>" class='gaia le val' /> 
                                                         </td> 
                                                     </tr> 
                                                     <tr> 
