--- a/edit-people.html
+++ b/edit-people.html
@@ -139,7 +139,7 @@
             <input class="PersonPicker" style="width: 200px;" />
             <script>
             $(function(){
-                PersonPicker.create( "input.PersonPicker" );
+                PersonPicker.create( "input.PersonPicker", alert );
             });
             </script>
         </div>
