Gigantische <select> vervangen door PersonPicker

--- a/edit-people.html
+++ b/edit-people.html
@@ -170,7 +170,8 @@
             <div class="slc_dialog" id="RelatieEditor">
                 <p>
                     <label for="pers_id_b">Persoon</label>
-                    <select id="pers_id_b" class="resetable"><?=Namen()?></select>
+                    <input id="pers_id_b" type="tekst" class="PersonPicker resetable" />
+                    <input id="actual_pers_id" type="hidden" />
                 </p>
                 <p>
                     <label for="type">Relatietype</label>
