Relaties werken weer

--- a/edit-people.html
+++ b/edit-people.html
@@ -179,7 +179,7 @@
                         <option value="ouder">Ouder van ...</option>
                         <option value="kind">Kind van ...</option>
                         <option value="partner">Partner van ...</option>
-                        <option value="overig">Anders / onbekend</option>
+                        <option value="anders">Anders / onbekend</option>
                     </select>
                 </p>
                 <p>
