Tumbeasts door Matthew Inman

--- a/error/notfound.html
+++ b/error/notfound.html
@@ -2,10 +2,14 @@
 <html>
     <head>
         <title>Oeps - Niet gevonden</title>
+        <link rel="stylesheet" href="/error/error.css" />
     </head>
     <body>
-        <h1>Niet gevonden</h1>
-        <p>De pagina die je zocht is niet gevonden.</p>
-        <p><a href="/">Terug naar de voorpagina.</a></p>
+        <div class="errorpage notfound">
+            <h1>Niet gevonden</h1>
+            <p>De pagina die je zocht is niet gevonden.</p>
+            <div class="spacer"></div>
+            <div class="backlink"><a href="/">Terug naar de voorpagina.</a></div>
+        </div>
     </body>
 </html>
