Tumbeast op 500-pagina

--- a/error/internal.html
+++ b/error/internal.html
@@ -2,10 +2,22 @@
 <html>
     <head>
         <title>Oeps - Interne fout</title>
+        <link rel="stylesheet" href="/error/error.css" />
     </head>
     <body>
-        <h1>Interne fout</h1>
-        <p>Er is een interne fout opgetreden.</p>
-        <p>Als dit aanhoudt, <a href="mailto:nerdcie@collegiummusicum.nl">stuur een mailtje naar de nerdcie.</a></p>
+        <div class="errorpage internal">
+            <h1>Interne fout</h1>
+            <p style="margin-top: 25px; width: auto">
+                Er is een interne fout opgetreden.
+                <br />
+                Waarschijnlijk is de nerdcie vergeten de datamonsters te voeren die in de server wonen.
+                Het kan daarom zijn dat het knabbelen aan de kabels nog even duurt.
+            </p>
+            <div class="spacer"></div>
+            <div class="backlink">
+                Als dit probleem aanhoudt,
+                <a href="mailto:nerdcie@collegiummusicum.nl">stuur een mailtje naar de nerdcie.</a>
+            </div>
+        </div>
     </body>
 </html>
